PROJECT(netcdfio)

IF(COMMAND CMAKE_POLICY)
        CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

ADD_LIBRARY( netcdfio ${LINKING_MODE}
		gt_symbols.h
		netcdfIO.cc
		netcdfIO.h
		read_command_line.cc
		read_command_line.h
		read_command_line_netcdf.cc
		read_command_line_netcdf.h
)

TARGET_LINK_LIBRARIES( netcdfio
)

SET_TARGET_PROPERTIES(netcdfio PROPERTIES
  MACOSX_RPATH "${CMAKE_INSTALL_RPATH}"
  PREFIX "${LIBPREFIX}"
  LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/geotop_src/"
  ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/geotop_src/"
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib/geotop_src/"
  CLEAN_DIRECT_OUTPUT 1
  VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}"
  SOVERSION "${VERSION_MAJOR}"
  )
INSTALL(TARGETS netcdfio
  RUNTIME DESTINATION lib/geotop_src/ COMPONENT libraries
  LIBRARY DESTINATION lib/geotop_src/ COMPONENT libraries
  ARCHIVE DESTINATION lib/geotop_src/ COMPONENT libraries
  )
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

